@@ -11,7 +11,10 @@ General
 REST API
 --------
 
+* API version upgraded to 9
 * "/tools/log-level-*": Dynamically access and/or change the verbosity of logging categories
+* "/peers/{id}/configuration": Get the configuration of one peer (cf. "/peers?expand")
+* "/modalities/{id}/configuration": Get the configuration of one modality (cf. "/modalities?expand")
 
 Maintenance
 -----------
